src/app/posts/[slug]/page.module.css
.container {
  width: 800px;
  margin-left: auto;
  margin-right: auto;
  overflow: hidden;
}

.info {
  display: flex;
  margin-top: 48px;
}

.title {
  font-size: 40px;
  font-family: "Pretendard SemiBold";
  color: var(--accent-color);
  margin-top: 8px;
  margin-bottom: 0px;
}

.description {
  font-size: 20px;
  font-family: "Pretendard SemiBold";
  color: #868b94;
  margin: 0;
}

.image {
  width: 100%;
  height: auto;
  aspect-ratio: 16/9;
  object-fit: cover;
  border-radius: 30px;
  margin-top: 48px;
  margin-bottom: 28px;
}

.content blockquote {
  margin: 40px 0px 40px 0px;
  padding: 8px 32px;
  border-radius: 20px;
  background-color: #f2f2f2;
}

.content blockquote p::before {
  content: url("/icons/docs.svg");
  width: 16px;
  height: 16px;
  padding-top: 8px;
  margin-right: 16px;
  display: flex;
  align-items: center;
}

.content blockquote p {
  font-size: 16px;
  margin-top: 10px;
  margin-bottom: 10px;
  line-height: 30px;
  font-family: "Pretendard";
  color: black;
  display: flex;
  align-items: center;
}

.content figcaption {
  color: grey;
  text-align: center;
  margin-top: -20px;
  margin-bottom: 60px;
}

.content li {
  font-family: "Pretendard";
  font-weight: 600;
  font-size: 20px;
  margin-top: 10px;
  margin-bottom: 10px;
  line-height: 35px;
}

.content pre {
  padding: 20px;
  border-radius: 10px;
  font-size: 15px;
  line-height: 25px;
  overflow: scroll;
  -ms-overflow-style: none; /* 인터넷 익스플로러 */
  scrollbar-width: none; /* 파이어폭스 */
  margin-top: 30px;
  margin-bottom: 30px;
}

.content pre::-webkit-scrollbar {
  display: none; /* 크롬, 사파리, 오페라, 엣지 */
}

.content code {
  font-family: "Menlo";
}

.content p {
  font-family: "Pretendard Regular";
  font-size: 18px;
  margin-top: 20px;
  margin-bottom: 20px;
  line-height: 30px;
  white-space: normal;
}
.content li {
  font-size: 1rem;
  font-family: "Pretendard";
  font-weight: 500;
  text-decoration: none;
  white-space: normal;
  word-wrap: break-word;
  line-height: 20px;
}

.content a {
  font-family: "Pretendard";
  color: inherit;
  text-decoration: none;
  white-space: normal;
  word-wrap: break-word;
  display: flex;
  align-items: center;
}

.content li > a:hover {
  text-decoration-line: underline;
}

.content p > a:hover {
  text-decoration-line: underline;
}

.content h1 {
  margin-top: 50px;
  margin-bottom: 10px;
  font-size: 40px;
  scroll-margin-top: 100px;
}

.content h2 {
  margin-top: 50px;
  margin-bottom: 20px;
  font-size: 36px;
  scroll-margin-top: 100px;
}

.content h3 {
  margin-top: 50px;
  margin-bottom: 20px;
  font-size: 32px;
  scroll-margin-top: 100px;
}

.content h4 {
  margin-top: 50px;
  margin-bottom: 20px;
  font-size: 28px;
  scroll-margin-top: 100px;
}

.content h5 {
  margin-top: 50px;
  margin-bottom: 20px;
  font-size: 24px;
  scroll-margin-top: 100px;
}

.content h6 {
  margin-top: 50px;
  margin-bottom: 20px;
  font-size: 20px;
  scroll-margin-top: 100px;
}

.content img {
  width: 100%;
  height: auto;
  object-fit: cover;
  margin-top: 50px;
  margin-bottom: 50px;
  border-radius: 16px;
  margin-left: auto;
  margin-right: auto;
  display: block;
  box-shadow: 0 0 2px;
}

.anchor::after {
  content: "#";
  opacity: 0;
  transition: all 0.2s ease-in-out;
}

.anchor:hover::after {
  content: "#";
  margin-left: 10px;
  color: #2b6cb0;
  opacity: 1;
}

.anchor {
  text-decoration: none;
}

.anchor:hover {
  text-decoration: none;
}

@media (max-width: 900px) {
  .container {
    width: 90%;
  }
}

